openapi and tests improved
